10679
The clever error message looks less clever:

{code}
scala> c.f _
<console>:14: error: missing argument list for method f in class CC
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `f _` or `f(_)` instead of `f`.
       c.f _
         ^

scala> c.f(_)
res3: Int => Int = $$Lambda$1088/149526537@e62319f

{code}
